--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ body {
 }
 
 header {
-    background: linear-gradient(rgba(3, 47, 75, .5), rgba(3, 47, 75, .5)), url(../img/header-bg.jpg) center;
+    background: linear-gradient(rgba(3, 47, 75, .5), rgba(3, 47, 75, .5)), url(../img/header-bg.jpg) center no-repeat;
+    object-fit: cover;
+    margin: -10px 0;
 }
 
 .header-wrapper {
@@ -51,7 +53,6 @@ header {
 
 .header-menu a {
     padding: 0 20px;
-    padding-top: -20px;
     font-size: 17px;
     line-height: 32px;
     color: #fbfdfd;
@@ -277,6 +278,10 @@ header {
     padding-bottom: 65px;
 }
 
+.animal a {
+    text-decoration: none;
+}
+
 .animal h3 {
     color: #1a1919;
     font-weight: 700;
@@ -328,6 +333,7 @@ header {
     border: 2.51px solid #dddddd;
     margin-top: 70px;
     transition: 2s ease all;
+    cursor: pointer;
 }
 
 .arrival-right-arrow::before {
@@ -358,8 +364,13 @@ header {
     transform: translate(-40%, -50%) rotate(-45deg);
 }
 
+.arrival a img {
+    transition: 1s ease all;
+}
+
 .arrival-left-arrow:hover,
-.arrival-right-arrow:hover {
+.arrival-right-arrow:hover,
+.arrival a img:hover {
     background: #dddddd;
 }
 
@@ -490,63 +501,92 @@ header {
 
 .gallery-wrap {
     background: #eeeeee;
+    padding-top: 130px;
 }
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 400px;
-    grid-auto-columns: 80px;
-    padding-top: 130px;
-    width: 80%;
-    margin: 0 auto;
-    padding-bottom: 415px;
+    grid-template: 320px 320px 320px / 1fr 1fr 1fr;
+    width: 60%;
+    gap: 20px;
+    margin: 0 auto 215px;
 }
 
-.bird-1,
-.bird-2,
-.bird-3,
-.bird-4,
-.bird-5,
-.ducks {
+.gallery div:nth-child(1) {
+    grid-area: 1 / 1 / 3 / 2;
+}
+
+.gallery div:nth-child(2) {
+    grid-area: 1 / 2 / 2 / 4;
+}
+
+.gallery div:nth-child(3) {
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.gallery div:nth-child(4) {
+    grid-area: 2 / 2 / 4 / 3;
+}
+
+.gallery div:nth-child(5) {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.gallery div:nth-child(6) {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+.gallery div>img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.gallery>div {
     position: relative;
 }
 
-.bird-1 img {
-    width: 400px;
-    height: 630px;
-    margin-right: 30px;
+.gallery>div:hover .bird-button {
+    opacity: 1;
 }
 
-.bird-2 img {
-    width: 800px;
-}
-
-.bird-3 img {
-    width: 400px;
-    height: 403px;
-    margin-top: 260px;
-}
-
-.gallery-bloc {
+.bird-button {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    opacity: 0;
+    transition: 1s ease all;
 }
 
-.bird-4 img {
-    width: 380px;
-    height: 663px;
+.bird-button a:first-child {
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+    padding: 18px 24px 18px 16px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: 1s ease all;
 }
 
-.ducks img {
-    width: 380px;
-    height: 320px;
-    margin-bottom: 20px;
+.bird-button a:last-child {
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+    padding: 15px 24px 12px 14px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: 1s ease all;
 }
 
-.bird-5 img {
-    width: 380px;
+.bird-button a:hover {
+    background-color: rgb(236, 226, 226);
 }
+
 
 .bird-1:hover::before,
 .bird-4:hover::before {
@@ -557,6 +597,10 @@ header {
     left: 30%;
     top: 70%;
     padding: 20px;
+}
+
+.bird-1::before:hover {
+    background-color: yellowgreen;
 }
 
 .bird-1:hover::after,
@@ -577,7 +621,7 @@ header {
     background: #ffffff;
     left: 40%;
     top: 40%;
-    padding: 20px;
+    padding: 20px 20px 18px 20px;
 }
 
 .bird-2:hover::after {
@@ -597,7 +641,7 @@ header {
     background: #ffffff;
     left: 30%;
     top: 110%;
-    padding: 20px;
+    padding: 20px 20px 18px 20px;
 }
 
 .bird-3:hover::after {
@@ -618,7 +662,7 @@ header {
     background: #ffffff;
     left: 30%;
     top: 40%;
-    padding: 20px;
+    padding: 20px 20px 18px 20px;
 }
 
 .bird-5:hover::after,
@@ -911,6 +955,7 @@ header {
     font-family: "Roboto";
     text-decoration: none;
     background: #f7672c;
+    transition: 1s ease all;
 }
 
 .footer-left-bloc a:hover {
@@ -972,9 +1017,14 @@ header {
     justify-content: center;
 }
 
-.social-line img{
+.social-line img {
     margin: 0 3px;
     margin-bottom: 35px;
+    transition: 1s ease all;
+}
+
+.social-line img:hover{
+    transform: scale(1.2);
 }
 
 .footer-line p {
